fix: fixed overlapping css

--- a/src/ReviewsByPerson.css
+++ b/src/ReviewsByPerson.css
@@ -1,4 +1,4 @@
-.reviews-list {
+.reviews-by-person .reviews-list {
 
   height:93vh;
   overflow-y: scroll;
@@ -19,7 +19,7 @@
   color: white;
 }
 
-.reviews-list {
+.reviews-by-person .reviews-list {
   display: flex;
   flex-direction: column;
   gap: 1.2rem;
